--- a/features/odl-transportpce/pom.xml
+++ b/features/odl-transportpce/pom.xml
@@ -117,6 +117,21 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
 
   <!-- skipping test since this is an umbrella project / folder -->
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.10.0</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctorj-diagram</artifactId>
+              <version>2.2.1</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
