--- a/pce/pom.xml
+++ b/pce/pom.xml
@@ -75,11 +75,11 @@
       <groupId>org.opendaylight.transportpce.models</groupId>
       <artifactId>tapi-2.4.0</artifactId>
     </dependency>
-    <dependency>
+    <!-- dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>transportpce-api</artifactId>
       <version>${project.version}</version>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>transportpce-common</artifactId>
