--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -16,7 +16,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>transportpce-inventory</artifactId>
-  <version>9.0.1</version>
+  <version>9.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
