--- a/lighty/pom.xml
+++ b/lighty/pom.xml
@@ -11,20 +11,20 @@
   <parent>
     <groupId>io.lighty.core</groupId>
     <artifactId>lighty-app-parent</artifactId>
-    <version>20.0.0</version>
+    <version>20.0.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
   <groupId>io.lighty.controllers</groupId>
   <artifactId>tpce</artifactId>
-  <version>9.0.1</version>
+  <version>9.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
     <application.main.class>io.lighty.controllers.tpce.Main</application.main.class>
     <application.attach.zip>true</application.attach.zip>
     <maven.deploy.skip>true</maven.deploy.skip>
-    <transportpce.version>9.0.1</transportpce.version>
+    <transportpce.version>9.1.0-SNAPSHOT</transportpce.version>
     <transportpce.models.version>20.0.1</transportpce.models.version>
   </properties>
 
