--- a/dmaap-client/pom.xml
+++ b/dmaap-client/pom.xml
@@ -15,7 +15,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>transportpce-dmaap-client</artifactId>
-  <version>7.3.1</version>
+  <version>7.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>client to send message to Dmaap message router</description>
 
