--- a/features/odl-transportpce-nbinotifications/pom.xml
+++ b/features/odl-transportpce-nbinotifications/pom.xml
@@ -17,7 +17,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>odl-transportpce-nbinotifications</artifactId>
-  <version>7.3.1</version>
+  <version>7.4.0-SNAPSHOT</version>
   <packaging>feature</packaging>
   <name>OpenDaylight :: transportpce :: nbinotifications</name>
 
