--- a/lighty/pom.xml
+++ b/lighty/pom.xml
@@ -17,14 +17,14 @@
 
   <groupId>io.lighty.controllers</groupId>
   <artifactId>tpce</artifactId>
-  <version>7.3.1</version>
+  <version>7.4.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
     <application.main.class>io.lighty.controllers.tpce.Main</application.main.class>
     <application.attach.zip>true</application.attach.zip>
     <maven.deploy.skip>true</maven.deploy.skip>
-    <transportpce.version>7.3.1</transportpce.version>
+    <transportpce.version>7.4.0-SNAPSHOT</transportpce.version>
     <transportpce.models.version>18.3.1</transportpce.models.version>
   </properties>
 
