--- a/pce/pom.xml
+++ b/pce/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>transportpce-pce</artifactId>
-  <version>7.3.1</version>
+  <version>7.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
