--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,7 +12,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>13.0.1</version>
+    <version>13.0.3</version>
     <relativePath/>
   </parent>
 
@@ -22,7 +22,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <packaging>bundle</packaging>
 
   <properties>
-    <transportpce.models.version>20.0.1</transportpce.models.version>
+    <transportpce.models.version>20.1.0-SNAPSHOT</transportpce.models.version>
   </properties>
 
   <dependencyManagement>
