--- a/features/odl-transportpce-tapi/pom.xml
+++ b/features/odl-transportpce-tapi/pom.xml
@@ -12,7 +12,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>single-feature-parent</artifactId>
-    <version>13.0.11</version>
+    <version>13.1.2</version>
     <relativePath/>
   </parent>
 
@@ -23,9 +23,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <name>OpenDaylight :: transportpce :: tapi</name>
 
   <properties>
-    <mdsal.version>13.0.1</mdsal.version>
-    <netconf.version>7.0.4</netconf.version>
-    <transportpce.models.version>20.0.1</transportpce.models.version>
+    <mdsal.version>13.0.3</mdsal.version>
+    <netconf.version>7.0.5</netconf.version>
+    <transportpce.models.version>20.1.0-SNAPSHOT</transportpce.models.version>
     <skip.karaf.featureTest>false</skip.karaf.featureTest>
   </properties>
 
@@ -41,7 +41,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
       <dependency>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>mdsal-artifacts</artifactId>
-        <version>13.0.1</version>
+        <version>13.0.3</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
