--- a/features/odl-transportpce-inventory/pom.xml
+++ b/features/odl-transportpce-inventory/pom.xml
@@ -22,7 +22,7 @@
   <properties>
     <mdsal.version>13.0.3</mdsal.version>
     <netconf.version>7.0.5</netconf.version>
-    <transportpce.models.version>20.1.0-SNAPSHOT</transportpce.models.version>
+    <transportpce.models.version>20.1.0</transportpce.models.version>
     <transportpce.db.host>localhost:3306</transportpce.db.host>
     <transportpce.db.database>transportpce</transportpce.db.database>
     <transportpce.db.username>root</transportpce.db.username>
