--- a/features/odl-transportpce-tapi/pom.xml
+++ b/features/odl-transportpce-tapi/pom.xml
@@ -25,7 +25,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <properties>
     <mdsal.version>13.0.3</mdsal.version>
     <netconf.version>7.0.5</netconf.version>
-    <transportpce.models.version>20.1.0-SNAPSHOT</transportpce.models.version>
+    <transportpce.models.version>20.1.0</transportpce.models.version>
     <skip.karaf.featureTest>false</skip.karaf.featureTest>
   </properties>
 
