--- a/features/odl-transportpce/pom.xml
+++ b/features/odl-transportpce/pom.xml
@@ -12,7 +12,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>single-feature-parent</artifactId>
-    <version>13.0.11</version>
+    <version>13.1.3</version>
     <relativePath/>
   </parent>
 
@@ -23,8 +23,8 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <name>OpenDaylight :: transportpce</name>
 
   <properties>
-    <netconf.version>7.0.4</netconf.version>
-    <transportpce.models.version>21.0.0-SNAPSHOT</transportpce.models.version>
+    <netconf.version>7.0.6</netconf.version>
+    <transportpce.models.version>20.1.1</transportpce.models.version>
     <configfile.directory>etc/opendaylight/karaf</configfile.directory>
     <skip.karaf.featureTest>false</skip.karaf.featureTest>
   </properties>
