--- a/servicehandler/pom.xml
+++ b/servicehandler/pom.xml
@@ -15,7 +15,7 @@ Author: Martial Coulibaly <martial.coulibaly@gfi.com> on behalf of Orange
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>13.0.1</version>
+    <version>13.0.4</version>
     <relativePath/>
   </parent>
 
@@ -25,7 +25,7 @@ Author: Martial Coulibaly <martial.coulibaly@gfi.com> on behalf of Orange
   <packaging>bundle</packaging>
 
   <properties>
-    <transportpce.models.version>21.0.0-SNAPSHOT</transportpce.models.version>
+    <transportpce.models.version>20.1.1</transportpce.models.version>
   </properties>
 
   <dependencyManagement>
