--- a/lighty/pom.xml
+++ b/lighty/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>io.lighty.core</groupId>
     <artifactId>lighty-app-parent</artifactId>
-    <version>20.0.0-SNAPSHOT</version>
+    <version>20.0.0</version>
     <relativePath/>
   </parent>
 
