--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,26 @@
 [tox]
 minversion = 3.7.0
-envlist = buildcontroller
-     testsPCE
-     sims121
-     build_karaf_tests121
-     tests121
-     sims221
-     build_karaf_tests221
-     tests_tapi
-     tests221
-     sims71
-     build_karaf_tests71
-     tests71
-     build_karaf_tests_hybrid
-     tests_hybrid
-     buildlighty
-     docs
-     docs-linkcheck
+envlist =
+#     buildcontroller
+#     testsPCE
+#     sims121
+#     build_karaf_tests121
+#     tests121
+#     sims221
+#     build_karaf_tests221
+#     tests_tapi
+#     tests221
+#     sims71
+#     build_karaf_tests71
+#     tests71
+#     build_karaf_tests_hybrid
+#     tests_hybrid
+#     buildlighty
+#     docs
+#     docs-linkcheck
      checkbashisms
-     pre-commit
-     pylint
+#     pre-commit
+#     pylint
 skipsdist = true
 setupdir = tests/
 
@@ -328,11 +329,16 @@ allowlist_externals = sh
                       sudo
                       find
 commands =
-    - sh -c 'command checkbashisms>/dev/null || sudo yum install -y devscripts-checkbashisms || sudo yum install -y devscripts-minimal || sudo yum install -y devscripts \
+    sh -c 'which yum \
+        && grep \'CentOS Stream release 8\' /etc/redhat-release \
+        && cat /etc/yum.repos.d/CentOS-Stream-AppStream.repo \
+        && sed -i \'s/mirrorlist/#mirrorlist/g\' /etc/yum.repos.d/CentOS-Stream-AppStream.repo \
+        && cat /etc/yum.repos.d/CentOS-Stream-AppStream.repo'
+    sh -c 'command checkbashisms>/dev/null || sudo yum install -y devscripts-checkbashisms || sudo yum install -y devscripts-minimal || sudo yum install -y devscripts \
         || sudo yum install -y https://archives.fedoraproject.org/pub/archive/fedora/linux/releases/31/Everything/x86_64/os/Packages/d/devscripts-checkbashisms-2.19.6-2.fc31.x86_64.rpm \
         || (echo "checkbashisms command not found - please install it \
              (e.g. sudo apt-get install devscripts | yum install devscripts-minimal )" >&2 && exit 1)'
-    - find . -not -path '*/\.*' -name *.sh -exec checkbashisms -f  \{\} +
+    find . -not -path '*/\.*' -name *.sh -exec checkbashisms -f  \{\} +
 
 [testenv:spelling]
 basepython = python3
