--- a/lighty/pom.xml
+++ b/lighty/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>io.lighty.core</groupId>
     <artifactId>lighty-app-parent</artifactId>
-    <version>19.1.0</version>
+    <version>19.2.0</version>
     <relativePath/>
   </parent>
 
@@ -25,7 +25,7 @@
     <application.attach.zip>true</application.attach.zip>
     <maven.deploy.skip>true</maven.deploy.skip>
     <transportpce.version>8.3.0-SNAPSHOT</transportpce.version>
-    <transportpce.models.version>19.3.0-SNAPSHOT</transportpce.models.version>
+    <transportpce.models.version>19.3.0</transportpce.models.version>
   </properties>
 
   <dependencyManagement>
